feat: Set up PDF Summarizer monorepo with FastAPI backend and Angular frontend
- Add FastAPI backend with feature-based module structure following best practices
  - Implement PDF processing module with text extraction
  - Add text summarization module using LangChain and OpenAI
  - Configure health checks and proper error handling
  - Set up Pydantic settings for environment configuration
- Configure Angular frontend with backend proxy
  - Add API service for type-safe backend communication
  - Set up proxy configuration for development
  - Configure HTTP client providers
- Add comprehensive Python gitignore patterns
- Create CLAUDE.md documentation for AI assistance
- Configure Nx workspace for Python support with @nxlv/python plugin

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,79 @@ Thumbs.db
 .github/instructions/nx.instructions.md
 
 .angular
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.venv/
+ENV/
+env.bak/
+venv.bak/
+*.egg-info/
+.eggs/
+*.egg
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+.hypothesis/
+.pytype/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.ruff_cache/
+*.log
+.python-version
+
+# Python virtual environments
+apps/backend/.venv/
+apps/backend/venv/
+apps/backend/env/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# UV package manager
+apps/backend/.uv/
+apps/backend/uv.lock
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# PyCharm
+.idea/
+
+# VS Code Python
+.vscode/*.py
+.vscode/settings.json
+
+# Distribution / packaging
+build/
+develop-eggs/
+downloads/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.whl
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+reports/
+apps/backend/reports/
+apps/backend/coverage/
