--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nx/js": "21.1.2",
     "@nx/web": "21.1.2",
     "@nx/workspace": "21.1.2",
+    "@nxlv/python": "^21.0.0",
     "@schematics/angular": "~19.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
