feat: Implement full PDF summarizer with authentication and UI
- Add OAuth2 authentication (Google/GitHub) with JWT tokens
- Implement PostgreSQL database with pgvector for embeddings
- Add support for both OpenAI and Ollama LLM providers
- Create complete Angular UI with Tailwind CSS
  - Login page with OAuth providers
  - PDF upload with drag-and-drop
  - Summary history with modal views
  - Reusable confirmation modal component
- Add file deduplication using SHA-256 hashes
- Implement comprehensive error handling
- Add Docker compose for PostgreSQL setup
- Include Alembic database migrations
- Create setup scripts and documentation

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,25 +1,54 @@
-# Environment
-ENVIRONMENT=development
-
 # API Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
-API_RELOAD=true
 
-# CORS Configuration
+# Frontend URL for CORS
 FRONTEND_URL=http://localhost:4200
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-3.5-turbo
-OPENAI_TEMPERATURE=0.7
-OPENAI_MAX_TOKENS=1000
+# Environment
+ENVIRONMENT=development
 
-# PDF Processing Configuration
+# LLM Provider Configuration
+# Options: "openai" or "ollama"
+LLM_PROVIDER=ollama
+
+# OpenAI Configuration (when LLM_PROVIDER=openai)
+# OPENAI_API_KEY=your-openai-api-key
+# OPENAI_MODEL=gpt-3.5-turbo
+# OPENAI_TEMPERATURE=0.7
+# OPENAI_MAX_TOKENS=1000
+
+# Ollama Configuration (when LLM_PROVIDER=ollama)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama2
+
+# PDF Processing
 MAX_PDF_SIZE_MB=10
 MAX_PDF_PAGES=100
 
-# Text Processing Configuration
+# Text Processing
 CHUNK_SIZE=4000
 CHUNK_OVERLAP=200
 DEFAULT_SUMMARY_LENGTH=500
+
+# JWT Configuration
+JWT_SECRET_KEY=your-secret-key-here
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_HOURS=24
+
+# OAuth2 Configuration (Optional)
+# Google OAuth
+# GOOGLE_CLIENT_ID=your-google-client-id
+# GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# GitHub OAuth
+# GITHUB_CLIENT_ID=your-github-client-id
+# GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# OAuth Redirect Configuration
+OAUTH_REDIRECT_URI=http://localhost:8000/api/v1/auth/callback
+ALLOWED_REDIRECT_URLS=http://localhost:4200,http://localhost:8000
+
+# Database Configuration
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/pdf_summarizer
+DATABASE_ECHO=False
