--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -15,14 +15,14 @@
         "browser": "apps/frontend/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/frontend/tsconfig.app.json",
-        "inlineStyleLanguage": "scss",
+        "inlineStyleLanguage": "css",
         "assets": [
           {
             "glob": "**/*",
             "input": "apps/frontend/public"
           }
         ],
-        "styles": ["apps/frontend/src/styles.scss"],
+        "styles": ["apps/frontend/src/styles.css"],
         "scripts": []
       },
       "configurations": {
