--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.1.8",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.2.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "nx": "21.1.2",
+    "postcss": "^8.5.4",
     "prettier": "^2.6.2",
+    "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0"
