--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -27,10 +27,22 @@ dependencies = [
   "python-multipart>=0.0.9",
   "pydantic>=2.0.0",
   "pydantic-settings>=2.0.0",
+  "pydantic[email]",
   "pypdf>=4.0.0",
   "langchain>=0.3.0",
   "langchain-openai>=0.3.0",
+  "langchain-ollama>=0.3.0",
   "python-dotenv>=1.0.0",
+  "authlib>=1.3.0",
+  "python-jose[cryptography]>=3.3.0",
+  "httpx>=0.27.0",
+  "itsdangerous>=2.2.0",
+  "sqlalchemy>=2.0.0",
+  "asyncpg>=0.29.0",
+  "alembic>=1.13.0",
+  "pgvector>=0.3.0",
+  "langchain-postgres>=0.0.12",
+  "greenlet>=3.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
