--- a/apps/frontend/.postcssrc.json
+++ b/apps/frontend/.postcssrc.json
@@ -1,7 +1,8 @@
 {
   "plugins": {
-    "@tailwindcss/postcss": {
+    "tailwindcss": {
       "config": "./tailwind.config.ts"
-    }
+    },
+    "autoprefixer": {}
   }
 }
