--- a/apps/frontend/.postcssrc.json
+++ b/apps/frontend/.postcssrc.json
@@ -1,8 +1,6 @@
 {
   "plugins": {
-    "tailwindcss": {
-      "config": "./tailwind.config.ts"
-    },
+    "@tailwindcss/postcss": {},
     "autoprefixer": {}
   }
 }
