--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -70,6 +70,12 @@ dependencies = [
   
   # Retry logic for external services
   "tenacity>=9.1.2",
+  
+  # LLM and embeddings
+  "langchain>=0.3.0",
+  "langchain-openai>=0.3.0",
+  "langchain-ollama>=0.3.0",
+  "openai>=1.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
